# dependency-graph

./: .env.example  .gitignore  DataPrep.ipynb  Example_Drips.ipynb  Example_WeightedGraph.ipynb  README.md  oso.py  pyproject.toml
data/: unweighted_graph.csv  unweighted_graph.json
data/archive/: npm_pkgs.parquet  pypi_pkgs.csv  repo_metrics.csv  rust_pkgs.csv  sbom.csv
data/drips/: Drips Data Dump 10.12.2024 - GitProjects.csv
datasets/gg24/: seedRepos.json  seedReposWithDependencies.json
datasets/gg24-phase2/: seedReposWithDependencies_pruned.json
datasets/oso/: oss_funding.csv  oss_funding.parquet  repo_and_funding_stats.csv  repo_basic_stats.csv  repo_metrics_and_metadata.parquet
datasets/pairwise/: get1stLevelCategoryList.json  getProjectMetadata.json  getProjectsForCategory.json
datasets/v2-graph/: README.md  dependency-graph-v2.csv  seedRepos.json  seedReposWithDependencies.json
graph/: README.md  pruned_repo_parent_weight_graph.csv  repo_parent_weight_graph.csv  unweighted_graph.csv  unweighted_graph.json  unweighted_graph_pruned_version.json  unweighted_graph_pruned_with_metadata.json
graph/v1/: unweighted_graph.csv  unweighted_graph_pruned_version.json  unweighted_graph_pruned_with_metadata.json
graph/weighting_examples/: example_weighted_graph.json  (+1 more)
notebooks/: fetch_node_metrics_and_metadata.ipynb  generate_unweighted_graph.ipynb  prep-kaggle-answersheet.ipynb  prep-kaggle-training.ipynb  pruned_unweighted_graph.ipynb
utils/: graph_to_csv.py  graph_to_pairwise_api.py  serialize_graph.py  validate_weights.py
(+7 files in other folders)
